<resources>
    <string name="app_name">trAIner</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="login_background_img">loginBackgroundImg</string>
    <string name="do_not_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">sign Up</string>
    <string name="enter_your_name">Enter First Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_new_password">Enter Password</string>
    <string name="signup_background_image">signup_background_image</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="facebook_app_id">452515276387883</string>
    <string name="fb_login_protocol_scheme">fb452515276387883</string>
    <string name="enter_your_gender">Gender</string>
    <string name="enter_your_age">Enter Age</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>

    <string name="bg_orange_image">bg orange image</string>
    <string name="weight_loss">WEIGHT LOSS</string>
    <string name="select_a_workout_to_start">Select A Workout To Start</string>
    <string name="push_up">Push-up</string>
    <string name="squat">Squat</string>
    <string name="plank">Plank</string>
    <string name="split_squat">Split Squat</string>
    <string name="sit_up">Sit-up</string>
    <string name="chin_up">Chin-up</string>
    <string name="leg_raise">Leg Raise</string>
    <string name="strength_training">STRENGTH TRAINING</string>
    <string name="bench_press_dumbbell">Bench Press - Dumbbell</string>
    <string name="bench_press_barbell">Bench Press - Barbell</string>
    <string name="shoulder_press_dumbbell">Shoulder Press - Dumbbell</string>
    <string name="shoulder_press_barbell">Shoulder Press - Barbell</string>
    <string name="hammer_curl">Hammer Curl</string>
    <string name="dead_lift">Dead Lift</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!--Gender drop down items - signUp activity-->
    <string-array name="genderDropdown">
        <!--suppress CheckTagEmptyBody -->
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="exerciseDropdown">
        <!--suppress CheckTagEmptyBody -->
        <item>Select Exercise</item>
        <item>Push up</item>
        <item>Sit up</item>
        <item>Chin up</item>
        <item>Hammer Curl</item>
        <item>Squat</item>
    </string-array>

    <string name="get_started">GET STARTED</string>
    <string name="welcome">WELCOME</string>
    <string name="text_about">Train and live the new experience of AI powered exercising at your home with trAIner and save your trainer costs!</string>
    <string name="start">Start</string>
    <string name="important">IMPORTANT</string>
    <string name="push_up_caps">PUSH UP</string>
    <string name="cam_view_instruction">Place your mobile camera to obatain the view aproximately as shown in the above images (Direction can be flipped) in order to read your body movements accurately and assist you by the trAIner AI model</string>
    <string name="sit_up_caps">SIT UP</string>
    <string name="plank_caps">PLANK</string>
    <string name="leg_raise_caps">LEG RAISE</string>
    <string name="chin_up_caps">CHIN UP</string>
    <string name="dead_lift_caps">DEAD LIFT</string>
    <string name="shoulder_press_barbell_cap">SHOULDER PRESS - BARBELL</string>
    <string name="shoulder_press_dumbbell_cap">SHOULDER PRESS - DUMBBELL</string>
    <string name="bench_press_dumbbell_caps">BENCH PRESS - DUMBBELL</string>
    <string name="bench_press_barbell_caps">BENCH PRESS - BARBELL</string>
    <string name="squat_caps">SQUAT</string>
    <string name="split_squat_cap">SPLIT SQUAT</string>
    <string name="hammer_curl_cap">HAMMER CURL</string>
    <string name="select_a_view">Select A View</string>
    <string name="view_instructions">HOLD ON! This workout can be done in different ways. Select a preferred type from below and place your mobile camera to obtain the correct view appropriately as shown in the image</string>
    <string name="right_hand_view">Right Hand View</string>
    <string name="left_hand_view">Left Hand View</string>
    <string name="front_view">Front View</string>
    <string name="mini_games">MINI GAMES</string>
    <string name="select_a_game_to_start">Select A Game To Start</string>
    <string name="coming_soon">COMING SOON</string>
    <string name="user_name">Emma James</string>
    <string name="progress_percentage">80%</string>
    <string name="text_progress">Progress</string>
    <string name="user_name_hint">User name</string>
    <string name="name_fixed">Name :</string>
    <string name="gender_fixed">Gender :</string>
    <string name="text_gender">Male</string>
    <string name="age_fixed">Age :</string>
    <string name="age_text">20</string>
    <string name="text_weight">60</string>
    <string name="weight_fixed">Weight (kg):</string>
    <string name="height_fixed">Height (cm):</string>
    <string name="text_height">170</string>
    <string name="email_fixed">Email :</string>
    <string name="text_email">example@gmail.com</string>
    <string name="create_challenge_fixed">Create challenge</string>
    <string name="select_time_fixed">Select time</string>
    <string name="text_time">8 : 00 PM</string>
    <string name="set_remainder_fixed">Set remainder</string>
    <string name="cancel_remainder_fixed">Cancel remainder</string>
    <string name="text_logout">Logout</string>
    <string name="text_featured_workouts">Featured Workouts</string>
    <string name="text_weight_loss">Weight Loss</string>
    <string name="text_strength_training">Strength training</string>
    <string name="text_hiit">HIIT</string>
    <string name="text_rate_us">RATE US</string>
    <string name="submit_fixed">SUBMIT</string>
    <string name="text_rank">Rank</string>
    <string name="text_accuracy">Accuracy</string>
    <string name="text_name">Name</string>
    <string name="user_name_hint_1">User Name</string>
    <string name="age_hint">Age</string>
    <string name="weight_hint">Weight (kg)</string>
    <string name="height_hint">Height (cm)</string>
    <string name="gender_hint">Gender</string>
    <string name="text_update">Update</string>
    <string name="model">Model: </string>
    <string name="fps">Fps: %d</string>
    <string name="fixed_repetition_count">Reps</string>
    <string name="fixed_enable_hide_skeleton_mode">Show debug</string>
    <string name="text_count">20</string>
    <string name="reward_txt2">Good job! Keep your pace, earn more, RANK UP.</string>
    <string name="reward_txt1">You won xxxx trAIner coins</string>
    <string name="congratulations">Congratulations !</string>
    <string name="continue_btn">Continue</string>
    <string name="better_luck_next_time">Better luck next time !</string>
    <string name="oops_you_failed">Oops! You failed.</string>
    <string name="loss_txt">You were close, Don\'t give up, You can still make it, CHALLANGE AGAIN.</string>
    <string name="send">SEND</string>
    <string name="txt_password_reset">A link will be sent to your email with further details. Please check.</string>
    <string name="reset_password">Reset Password</string>
    <string name="add_new">Add</string>
    <string name="fixed_daily_challenges">Daily Challenges</string>
    <string name="fixed_weekly_challenges">Weekly Challenges</string>
    <string name="fixed_push_up">PUSH UP</string>
    <string name="fixed_sit_up">SIT UP</string>
    <string name="fixed_chin_up">CHIN UP</string>
    <string name="fixed_plank">PLANK</string>
    <string name="fixed_hammer_curl">HAMMER CURL</string>
    <string name="daily_pushUp_completeness">0 / 5</string>
    <string name="daily_sitUp_completeness">0 / 5</string>
    <string name="fixed_squats">SQUATS</string>
    <string name="daily_squats_completeness">0 / 5</string>
    <string name="daily_plank_completeness">0 / 5</string>
    <string name="weekly_pushUp_completeness">0 / 40</string>
    <string name="weekly_chinUp_completeness">0 / 40</string>
    <string name="weekly_plank_completeness">0 / 40</string>
    <string name="weekly_hammerCurl_completeness">0 / 40</string>
    <string name="weekly_sitUp_completeness">0 / 40</string>
    <string name="Search">Search</string>
    <string name="fixed_workout_counts">Workout counts</string>
    <string name="tv_bench_press_barbell">BENCH PRESS BARBELL : </string>
    <string name="bench_press_barbell_count">0</string>
    <string name="tv_bench_press_dumbbell">BENCH PRESS DUMBBELL : </string>
    <string name="bench_press_dumbbell_count">0</string>
    <string name="tv_chin_up">CHIN UP :</string>
    <string name="chin_up_count">0</string>
    <string name="tv_dead_lift">DEAD LIFT :</string>
    <string name="dead_lift_count">0</string>
    <string name="tv_hammer_curl">HAMMER CURL :</string>
    <string name="hammer_curl_count">0</string>
    <string name="tv_leg_raise">LEG RAISE :</string>
    <string name="leg_raise_count">0</string>
    <string name="tv_plank">PLANK :</string>
    <string name="plank_count">0</string>
    <string name="tv_push_up">PUSH UP :</string>
    <string name="push_up_count">0</string>
    <string name="tv_shoulder_press_barbell">SHOULDER PRESS BARBELL :</string>
    <string name="shoulder_press_barbell_count">0</string>
    <string name="tv_shoulder_press_dumbbell">SHOULDER PRESS DUMBBELL :</string>
    <string name="shoulder_press_dumbbell_count">0</string>
    <string name="tv_sit_up">SIT UP :</string>
    <string name="sit_up_count">0</string>
    <string name="tv_split_squat">SPLIT SQUAT :</string>
    <string name="split_squat_count">0</string>
    <string name="tv_squat">SQUAT :</string>
    <string name="squat_count">0</string>
    <string name="text_time_count">00 : 00</string>
    <string name="fixed_time">Time</string>
    <string name="fixed_mini_games">Mini games</string>
    <string name="search_a_person">Search A Person</string>
    <string name="create_challenges">CREATE CHALLENGES</string>
    <string name="workout_1">Workout 1</string>
    <string name="enter_repetition_count">Enter repetition count</string>
    <string name="workout_2">Workout 2</string>
    <string name="workout_3">Workout 3</string>

    <string-array name="models_array">
        <item>Light</item>
        <item>Thunder</item>
    </string-array>

    <string-array name="accelerator">
        <item>CPU</item>
        <item>GPU</item>
        <item>NNAPI</item>
    </string-array>
</resources>