<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    android:padding="30dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:boxBackgroundColor="?attr/colorOnSurface"
        android:hint="@string/user_name_hint_1"
        app:boxStrokeColor="?attr/colorOnSurface"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="2dp"
        app:hintTextAppearance="@style/TextLabel"
        android:textColorHint="?attr/colorOnSurface"
        app:hintTextColor="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tfEditName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/user_name"
            android:textColor="@color/white"
            android:textSize="16sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:boxBackgroundColor="?attr/colorOnSurface"
        android:hint="@string/age_hint"
        app:boxStrokeColor="?attr/colorOnSurface"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="2dp"
        app:hintTextAppearance="@style/TextLabel"
        android:textColorHint="?attr/colorOnSurface"
        app:hintTextColor="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfFullName">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/age_text"
            android:textColor="@color/white"
            android:textSize="16sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:boxBackgroundColor="?attr/colorOnSurface"
        android:hint="@string/weight_hint"
        app:boxStrokeColor="?attr/colorOnSurface"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="2dp"
        app:hintTextAppearance="@style/TextLabel"
        android:textColorHint="?attr/colorOnSurface"
        app:hintTextColor="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfAge">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/text_weight"
            android:textColor="@color/white"
            android:textSize="16sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:boxBackgroundColor="?attr/colorOnSurface"
        android:hint="@string/height_hint"
        app:boxStrokeColor="?attr/colorOnSurface"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="2dp"
        app:hintTextAppearance="@style/TextLabel"
        android:textColorHint="?attr/colorOnSurface"
        app:hintTextColor="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfWeight">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/text_height"
            android:textColor="@color/white"
            android:textSize="16sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:boxBackgroundColor="?attr/colorOnSurface"
        android:hint="@string/gender_hint"
        app:boxStrokeColor="?attr/colorOnSurface"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="2dp"
        app:hintTextAppearance="@style/TextLabel"
        android:textColorHint="?attr/colorOnSurface"
        app:hintTextColor="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfHeight">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/text_gender"
            android:textColor="@color/white"
            android:textSize="16sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/updateBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/orange"
        android:fontFamily="sans-serif-medium"
        android:padding="10dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/text_update"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/tfGender"
        app:layout_constraintStart_toStartOf="@+id/tfGender"
        app:layout_constraintTop_toBottomOf="@+id/tfGender" />

</androidx.constraintlayout.widget.ConstraintLayout>